--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3308/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:mysql://localhost:3308/${DB_NAME}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jitechpilotdb
+spring.datasource.username=root
+spring.datasource.password=F@tiOuss@m@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.sql.init.mode=always
