--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DB_NAME}
+spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DB_NAME}?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
