--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=${SERVER_PORT}
 
 spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DB_NAME}?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
@@ -10,5 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true    
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=true
+
