--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.sql.init.mode=always
-#spring.sql.init.platform=mysql
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.platform=mysql
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true    
