--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
-server.port=${SERVER_PORT}
+#server.port=${SERVER_PORT}
+#
+#spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DB_NAME}?createDatabaseIfNotExist=true
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DB_NAME}?createDatabaseIfNotExist=true
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.sql.init.mode=always
+#spring.sql.init.platform=mysql
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jitechpilotdbc?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=F@tiOuss@m@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.platform=mysql
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true    
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
